--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Virtual Keyboard</title>
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="shortcut icon" href="./assets/keyboard.ico" type="image/x-icon">
+  
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <script src="./script/dist/index_bundle.js"></script>
+  <script src="./src/index.js" type="module"></script>
 </body>
 </html>
